fix: changed font-size of heading on small devices

--- a/styles.css
+++ b/styles.css
@@ -520,7 +520,7 @@ hr {
 @media (min-width: 481px) and (max-width: 767px) {
   .home__heading--one {
     font-family: 'Courier Prime', monospace;
-    font-size: 30px;
+    font-size: 25px;
 }
 }
 
@@ -529,7 +529,7 @@ hr {
 @media (min-width: 768px) and (max-width: 1024px) {
   .home__heading--one {
     font-family: 'Courier Prime', monospace;
-    font-size: 40px;
+    font-size: 35px;
   }
 
   .talents__card,
